--- a/index.html
+++ b/index.html
@@ -1,214 +1,161 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Anugerah Sinergijaya Group | Depot Air Minum RO</title>
+  <meta charset="UTF-8">
+  <title>Anugerah Sinergijaya Group | Depot Air Minum RO Premium</title>
 
-<meta name="description" content="Anugerah Sinergijaya Group melayani pembuatan dan pemasangan depot air minum RO profesional dan higienis.">
-<meta name="robots" content="index, follow">
+  <meta name="description" content="Anugerah Sinergijaya Group adalah depot air minum RO premium dan jasa pemasangan perangkat depot air RO di Bekasi.">
+  <meta name="keywords" content="depot air minum, depot air RO, pemasangan depot air RO, depot air bekasi">
+  <meta name="robots" content="index, follow">
 
-<style>
-*{margin:0;padding:0;box-sizing:border-box;font-family:Arial,Helvetica,sans-serif}
-body{background:#fff;color:#222}
-a{text-decoration:none}
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-/* HEADER */
-header{
-  position:sticky;top:0;z-index:1000;
-  background:#fff;
-  box-shadow:0 2px 10px rgba(0,0,0,.08)
-}
-.header{
-  max-width:1200px;margin:auto;
-  padding:12px 20px;
-  display:flex;align-items:center;justify-content:space-between
-}
-.logo{
-  display:flex;align-items:center;gap:12px;
-  animation:float 4s ease-in-out infinite
-}
-.logo img{height:46px}
-.logo span{font-weight:700;color:#0d6efd}
-@keyframes float{
-  0%{transform:translateY(0)}
-  50%{transform:translateY(-5px)}
-  100%{transform:translateY(0)}
-}
-nav a{margin-left:20px;font-weight:600;color:#333}
-nav a:hover{color:#0d6efd}
+  <style>
+    body {
+      margin: 0;
+      font-family: 'Segoe UI', sans-serif;
+      background: #0f172a;
+      color: #e5e7eb;
+    }
 
-/* HERO */
-.hero{
-  background:
-    linear-gradient(rgba(0,0,0,.45),rgba(0,0,0,.45)),
-    url("2.jpeg") center/cover no-repeat;
-  color:#fff;
-  padding:90px 20px
-}
-.hero-inner{max-width:1200px;margin:auto}
-.hero h1{font-size:36px;margin-bottom:12px}
-.hero p{max-width:620px}
-.btn{
-  display:inline-block;margin-top:20px;
-  background:#25d366;color:#000;
-  padding:12px 24px;border-radius:30px;
-  font-weight:700
-}
+    header {
+      background: linear-gradient(135deg, #020617, #020617cc),
+                  url('logo.jpeg') center/300px no-repeat;
+      text-align: center;
+      padding: 80px 20px;
+    }
 
-/* SECTION */
-section{padding:70px 20px}
-.container{max-width:1200px;margin:auto}
-.title{text-align:center;margin-bottom:40px}
-.title h2{font-size:30px;color:#0d6efd;margin-bottom:8px}
-.title p{color:#555}
+    header img {
+      width: 120px;
+      animation: float 3s ease-in-out infinite;
+    }
 
-/* GRID */
-.grid{
-  display:grid;
-  grid-template-columns:repeat(auto-fit,minmax(240px,1fr));
-  gap:20px
-}
-.card{
-  background:#fff;border-radius:12px;
-  overflow:hidden;
-  box-shadow:0 8px 20px rgba(0,0,0,.08)
-}
-.card img{
-  width:100%;
-  height:200px;
-  object-fit:cover
-}
-.card .text{
-  padding:14px;
-  text-align:center;
-  font-weight:600
-}
+    @keyframes float {
+      0% { transform: translateY(0); }
+      50% { transform: translateY(-10px); }
+      100% { transform: translateY(0); }
+    }
 
-/* JASA */
-.jasa{background:#f5f7fa}
-.jasa ul{
-  max-width:700px;
-  margin:auto;
-  list-style:none
-}
-.jasa li{
-  padding:12px 0;
-  border-bottom:1px dashed #ccc
-}
+    h1 {
+      margin: 20px 0 10px;
+      font-size: 2.4em;
+      color: #38bdf8;
+    }
 
-/* FOOTER */
-footer{
-  background:#0d6efd;
-  color:#fff;
-  padding:40px 20px
-}
-.footer{
-  max-width:1200px;margin:auto;
-  display:grid;
-  grid-template-columns:repeat(auto-fit,minmax(250px,1fr));
-  gap:30px
-}
-.copy{text-align:center;margin-top:30px;font-size:14px;opacity:.9}
+    section {
+      padding: 60px 20px;
+      max-width: 1200px;
+      margin: auto;
+    }
 
-@media(max-width:768px){
-  .hero h1{font-size:26px}
-}
-</style>
+    h2 {
+      text-align: center;
+      color: #38bdf8;
+      margin-bottom: 30px;
+    }
+
+    .grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+      gap: 20px;
+    }
+
+    .card {
+      background: #020617;
+      border-radius: 12px;
+      padding: 15px;
+      text-align: center;
+    }
+
+    .card img {
+      width: 100%;
+      max-height: 160px;
+      object-fit: cover;
+      border-radius: 10px;
+    }
+
+    .card p {
+      margin-top: 10px;
+      font-size: 14px;
+      color: #cbd5f5;
+    }
+
+    footer {
+      background: #020617;
+      padding: 40px 20px;
+      text-align: center;
+      font-size: 14px;
+    }
+
+    .contact {
+      line-height: 1.8;
+    }
+  </style>
 </head>
 
 <body>
 
 <header>
-  <div class="header">
-    <div class="logo">
-      <img src="logo.jpeg" alt="Logo">
-      <span>Anugerah<br>Sinergijaya Group</span>
-    </div>
-    <nav>
-      <a href="#produk">Produk</a>
-      <a href="#jasa">Jasa</a>
-      <a href="#pemasangan">Pemasangan</a>
-    </nav>
-  </div>
+  <img src="logo.jpeg" alt="Logo Anugerah Sinergijaya Group">
+  <h1>Anugerah Sinergijaya Group</h1>
+  <p>Depot Air Minum RO Premium & Jasa Pemasangan</p>
 </header>
 
-<div class="hero">
-  <div class="hero-inner">
-    <h1>Depot Air Minum RO Profesional</h1>
-    <p>Melayani pembuatan, penjualan, dan pemasangan depot air minum RO higienis & modern.</p>
-    <a class="btn" href="https://wa.me/6285694319000" target="_blank">Hubungi WhatsApp</a>
-  </div>
-</div>
+<section>
+  <h2>Profil Usaha</h2>
+  <p style="text-align:center;max-width:800px;margin:auto;">
+    Anugerah Sinergijaya Group bergerak di bidang depot air minum RO premium
+    serta jasa pemasangan perangkat depot air RO dengan kualitas profesional,
+    higienis, dan terpercaya.
+  </p>
+</section>
 
-<section id="produk">
-  <div class="container">
-    <div class="title">
-      <h2>Produk & Perangkat</h2>
-      <p>Perangkat depot air minum RO</p>
-    </div>
-    <div class="grid">
-      <div class="card"><img src="1.jpeg"><div class="text">Mesin RO</div></div>
-      <div class="card"><img src="2.jpeg"><div class="text">Depot RO</div></div>
-      <div class="card"><img src="3.jpeg"><div class="text">Proses Pengisian</div></div>
-      <div class="card"><img src="4.jpeg"><div class="text">Instalasi</div></div>
-      <div class="card"><img src="5.jpeg"><div class="text">Kabinet</div></div>
-      <div class="card"><img src="6.jpeg"><div class="text">Tangki Air</div></div>
-      <div class="card"><img src="7.jpeg"><div class="text">Workshop</div></div>
-      <div class="card"><img src="8.jpeg"><div class="text">Depot Siap Operasi</div></div>
-    </div>
+<section>
+  <h2>Galeri Depot Air Minum</h2>
+  <div class="grid">
+    <div class="card"><img src="1.jpeg"><p>Unit Depot Air RO</p></div>
+    <div class="card"><img src="2.jpeg"><p>Mesin Filtrasi Air</p></div>
+    <div class="card"><img src="3.jpeg"><p>Proses Produksi</p></div>
+    <div class="card"><img src="4.jpeg"><p>Pengisian Air Minum</p></div>
+    <div class="card"><img src="5.jpeg"><p>Peralatan Steril</p></div>
+    <div class="card"><img src="6.jpeg"><p>Depot Siap Operasi</p></div>
+    <div class="card"><img src="7.jpeg"><p>Hasil Produksi</p></div>
+    <div class="card"><img src="8.jpeg"><p>Depot Premium</p></div>
   </div>
 </section>
 
-<section id="jasa" class="jasa">
-  <div class="container">
-    <div class="title">
-      <h2>Jasa Kami</h2>
-      <p>Layanan lengkap depot air minum RO</p>
-    </div>
-    <ul>
-      <li>✔️ Pembuatan depot air minum RO</li>
-      <li>✔️ Penjualan mesin RO</li>
-      <li>✔️ Jasa pemasangan depot air minum</li>
-      <li>✔️ Renovasi & upgrade depot</li>
-      <li>✔️ Servis & perawatan</li>
-    </ul>
-  </div>
-</section>
-
-<section id="pemasangan">
-  <div class="container">
-    <div class="title">
-      <h2>Jasa Pemasangan Depot RO</h2>
-      <p>Dokumentasi pemasangan</p>
-    </div>
-    <div class="grid">
-      <div class="card"><img src="pemasangan1.jpeg"><div class="text">Pemasangan 1</div></div>
-      <div class="card"><img src="pemasangan2.jpeg"><div class="text">Pemasangan 2</div></div>
-      <div class="card"><img src="pemasangan3.jpeg"><div class="text">Pemasangan 3</div></div>
-      <div class="card"><img src="pemasangan4.jpeg"><div class="text">Pemasangan 4</div></div>
-      <div class="card"><img src="pemasangan5.jpeg"><div class="text">Pemasangan 5</div></div>
-      <div class="card"><img src="pemasangan6.jpeg"><div class="text">Pemasangan 6</div></div>
-      <div class="card"><img src="pemasangan7.jpeg"><div class="text">Pemasangan 7</div></div>
-      <div class="card"><img src="pemasangan8.jpeg"><div class="text">Pemasangan 8</div></div>
-      <div class="card"><img src="pemasangan9.jpeg"><div class="text">Pemasangan 9</div></div>
-      <div class="card"><img src="pemasangan10.jpeg"><div class="text">Pemasangan 10</div></div>
-    </div>
+<section>
+  <h2>Jasa Pemasangan Depot Air RO</h2>
+  <div class="grid">
+    <div class="card"><img src="pemasangan1.jpeg"><p>Pemasangan RO 1</p></div>
+    <div class="card"><img src="pemasangan2.jpeg"><p>Pemasangan RO 2</p></div>
+    <div class="card"><img src="pemasangan3.jpeg"><p>Pemasangan RO 3</p></div>
+    <div class="card"><img src="pemasangan4.jpeg"><p>Pemasangan RO 4</p></div>
+    <div class="card"><img src="pemasangan5.jpeg"><p>Pemasangan RO 5</p></div>
+    <div class="card"><img src="pemasangan6.jpeg"><p>Pemasangan RO 6</p></div>
+    <div class="card"><img src="pemasangan7.jpeg"><p>Pemasangan RO 7</p></div>
+    <div class="card"><img src="pemasangan8.jpeg"><p>Pemasangan RO 8</p></div>
+    <div class="card"><img src="pemasangan9.jpeg"><p>Pemasangan RO 9</p></div>
+    <div class="card"><img src="pemasangan10.jpeg"><p>Pemasangan RO 10</p></div>
   </div>
 </section>
 
 <footer>
-  <div class="footer">
-    <div>
-      <h3>Anugerah Sinergijaya Group</h3>
-      <p>Spesialis depot air minum RO profesional & terpercaya.</p>
-    </div>
-    <div>
-      <h3>Kontak</h3>
-      <p>WhatsApp: 0856-9431-9000</p>
-    </div>
+  <div class="contact">
+    <strong>Alamat Pusat:</strong><br>
+    Jl. Bintara VII RT 004 RW 003, Bekasi<br><br>
+
+    <strong>Cabang:</strong><br>
+    Jl. Malaka Baru No 8A RT 05 RW 01<br>
+    Bintara, Bekasi Barat<br><br>
+
+    <strong>Kontak:</strong><br>
+    📞 0856-9431-9000
   </div>
-  <div class="copy">© 2026 Anugerah Sinergijaya Group</div>
+
+  <p style="margin-top:20px;">
+    © 2025 Anugerah Sinergijaya Group
+  </p>
 </footer>
 
 </body>
