--- a/index.html
+++ b/index.html
@@ -1,96 +1,103 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-  <meta charset="UTF-8">
-  <title>Anugerah Sinergijaya Group | Depot Air Minum RO Premium</title>
+<meta charset="UTF-8">
+<title>Anugerah Sinergijaya Group | Depot Air Minum RO Premium</title>
 
-  <meta name="description" content="Anugerah Sinergijaya Group adalah depot air minum RO premium dan jasa pemasangan perangkat depot air RO di Bekasi.">
-  <meta name="keywords" content="depot air minum, depot air RO, pemasangan depot air RO, depot air bekasi">
-  <meta name="robots" content="index, follow">
+<meta name="description" content="Anugerah Sinergijaya Group melayani depot air minum RO premium dan jasa pemasangan perangkat depot air RO di Bekasi.">
+<meta name="keywords" content="depot air minum, depot air RO, pemasangan depot air RO, depot air bekasi">
+<meta name="robots" content="index, follow">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<style>
+*{box-sizing:border-box}
+body{
+  margin:0;
+  font-family:Segoe UI,Arial,sans-serif;
+  background:#0b1220;
+  color:#e5e7eb;
+}
 
-  <style>
-    body {
-      margin: 0;
-      font-family: 'Segoe UI', sans-serif;
-      background: #0f172a;
-      color: #e5e7eb;
-    }
+header{
+  background:
+    linear-gradient(180deg,rgba(0,0,0,.7),#0b1220),
+    url('logo.jpeg') center/260px no-repeat;
+  text-align:center;
+  padding:90px 20px;
+}
 
-    header {
-      background: linear-gradient(135deg, #020617, #020617cc),
-                  url('logo.jpeg') center/300px no-repeat;
-      text-align: center;
-      padding: 80px 20px;
-    }
+header img{
+  width:130px;
+  animation:float 4s ease-in-out infinite;
+}
 
-    header img {
-      width: 120px;
-      animation: float 3s ease-in-out infinite;
-    }
+@keyframes float{
+  0%{transform:translateY(0)}
+  50%{transform:translateY(-12px)}
+  100%{transform:translateY(0)}
+}
 
-    @keyframes float {
-      0% { transform: translateY(0); }
-      50% { transform: translateY(-10px); }
-      100% { transform: translateY(0); }
-    }
+h1{
+  color:#38bdf8;
+  margin:20px 0 10px;
+  font-size:2.4em;
+}
 
-    h1 {
-      margin: 20px 0 10px;
-      font-size: 2.4em;
-      color: #38bdf8;
-    }
+section{
+  max-width:1200px;
+  margin:auto;
+  padding:60px 20px;
+}
 
-    section {
-      padding: 60px 20px;
-      max-width: 1200px;
-      margin: auto;
-    }
+h2{
+  text-align:center;
+  color:#38bdf8;
+  margin-bottom:30px;
+}
 
-    h2 {
-      text-align: center;
-      color: #38bdf8;
-      margin-bottom: 30px;
-    }
+p.center{
+  text-align:center;
+  max-width:820px;
+  margin:auto;
+  line-height:1.7;
+}
 
-    .grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
-      gap: 20px;
-    }
+.grid{
+  display:grid;
+  grid-template-columns:repeat(auto-fit,minmax(220px,1fr));
+  gap:20px;
+}
 
-    .card {
-      background: #020617;
-      border-radius: 12px;
-      padding: 15px;
-      text-align: center;
-    }
+.card{
+  background:#020617;
+  border-radius:14px;
+  padding:12px;
+}
 
-    .card img {
-      width: 100%;
-      max-height: 160px;
-      object-fit: cover;
-      border-radius: 10px;
-    }
+.card img{
+  width:100%;
+  height:170px;
+  object-fit:cover;
+  border-radius:10px;
+  transition:.3s;
+}
 
-    .card p {
-      margin-top: 10px;
-      font-size: 14px;
-      color: #cbd5f5;
-    }
+.card img:hover{
+  transform:scale(1.05);
+}
 
-    footer {
-      background: #020617;
-      padding: 40px 20px;
-      text-align: center;
-      font-size: 14px;
-    }
+footer{
+  background:#020617;
+  padding:40px 20px;
+  text-align:center;
+  font-size:14px;
+}
 
-    .contact {
-      line-height: 1.8;
-    }
-  </style>
+footer .alamat{
+  line-height:1.9;
+  margin-bottom:15px;
+}
+</style>
 </head>
 
 <body>
@@ -102,60 +109,62 @@
 </header>
 
 <section>
-  <h2>Profil Usaha</h2>
-  <p style="text-align:center;max-width:800px;margin:auto;">
+  <h2>Tentang Kami</h2>
+  <p class="center">
     Anugerah Sinergijaya Group bergerak di bidang depot air minum RO premium
-    serta jasa pemasangan perangkat depot air RO dengan kualitas profesional,
-    higienis, dan terpercaya.
+    serta jasa pemasangan perangkat depot air RO. Kami mengutamakan kualitas,
+    higienitas, dan pelayanan profesional untuk kebutuhan air minum masyarakat.
   </p>
 </section>
 
 <section>
   <h2>Galeri Depot Air Minum</h2>
   <div class="grid">
-    <div class="card"><img src="1.jpeg"><p>Unit Depot Air RO</p></div>
-    <div class="card"><img src="2.jpeg"><p>Mesin Filtrasi Air</p></div>
-    <div class="card"><img src="3.jpeg"><p>Proses Produksi</p></div>
-    <div class="card"><img src="4.jpeg"><p>Pengisian Air Minum</p></div>
-    <div class="card"><img src="5.jpeg"><p>Peralatan Steril</p></div>
-    <div class="card"><img src="6.jpeg"><p>Depot Siap Operasi</p></div>
-    <div class="card"><img src="7.jpeg"><p>Hasil Produksi</p></div>
-    <div class="card"><img src="8.jpeg"><p>Depot Premium</p></div>
+    <div class="card"><img src="1.jpeg"></div>
+    <div class="card"><img src="2.jpeg"></div>
+    <div class="card"><img src="3.jpeg"></div>
+    <div class="card"><img src="4.jpeg"></div>
+    <div class="card"><img src="5.jpeg"></div>
+    <div class="card"><img src="6.jpeg"></div>
+    <div class="card"><img src="7.jpeg"></div>
+    <div class="card"><img src="8.jpeg"></div>
   </div>
 </section>
 
 <section>
-  <h2>Jasa Pemasangan Depot Air RO</h2>
+  <h2>Review Pemasangan Depot Air RO</h2>
   <div class="grid">
-    <div class="card"><img src="pemasangan1.jpeg"><p>Pemasangan RO 1</p></div>
-    <div class="card"><img src="pemasangan2.jpeg"><p>Pemasangan RO 2</p></div>
-    <div class="card"><img src="pemasangan3.jpeg"><p>Pemasangan RO 3</p></div>
-    <div class="card"><img src="pemasangan4.jpeg"><p>Pemasangan RO 4</p></div>
-    <div class="card"><img src="pemasangan5.jpeg"><p>Pemasangan RO 5</p></div>
-    <div class="card"><img src="pemasangan6.jpeg"><p>Pemasangan RO 6</p></div>
-    <div class="card"><img src="pemasangan7.jpeg"><p>Pemasangan RO 7</p></div>
-    <div class="card"><img src="pemasangan8.jpeg"><p>Pemasangan RO 8</p></div>
-    <div class="card"><img src="pemasangan9.jpeg"><p>Pemasangan RO 9</p></div>
-    <div class="card"><img src="pemasangan10.jpeg"><p>Pemasangan RO 10</p></div>
+    <div class="card"><img src="pemasangan1.jpeg"></div>
+    <div class="card"><img src="pemasangan2.jpeg"></div>
+    <div class="card"><img src="pemasangan3.jpeg"></div>
+    <div class="card"><img src="pemasangan4.jpeg"></div>
+    <div class="card"><img src="pemasangan5.jpeg"></div>
+    <div class="card"><img src="pemasangan6.jpeg"></div>
+    <div class="card"><img src="pemasangan7.jpeg"></div>
+    <div class="card"><img src="pemasangan8.jpeg"></div>
+    <div class="card"><img src="pemasangan9.jpeg"></div>
+    <div class="card"><img src="pemasangan10.jpeg"></div>
   </div>
 </section>
 
 <footer>
-  <div class="contact">
+  <div class="alamat">
     <strong>Alamat Pusat:</strong><br>
-    Jl. Bintara VII RT 004 RW 003, Bekasi<br><br>
+    Jl. Bintara VII RT 004 RW 003, Bekasi
+  </div>
 
+  <div class="alamat">
     <strong>Cabang:</strong><br>
     Jl. Malaka Baru No 8A RT 05 RW 01<br>
-    Bintara, Bekasi Barat<br><br>
+    Bintara, Bekasi Barat
+  </div>
 
+  <div class="alamat">
     <strong>Kontak:</strong><br>
     📞 0856-9431-9000
   </div>
 
-  <p style="margin-top:20px;">
-    © 2025 Anugerah Sinergijaya Group
-  </p>
+  <p>© 2025 Anugerah Sinergijaya Group</p>
 </footer>
 
 </body>
