--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <title>Anugerah Sinergijaya Group | Depot Air Minum RO Premium</title>
 
-<meta name="description" content="Anugerah Sinergijaya Group melayani depot air minum RO premium dan jasa pemasangan perangkat depot air RO di Bekasi.">
+<meta name="description" content="Anugerah Sinergijaya Group melayani depot air minum RO premium dan jasa pemasangan depot air RO di Bekasi.">
 <meta name="keywords" content="depot air minum, depot air RO, pemasangan depot air RO, depot air bekasi">
 <meta name="robots" content="index, follow">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,110 +13,134 @@
 *{box-sizing:border-box}
 body{
   margin:0;
-  font-family:Segoe UI,Arial,sans-serif;
-  background:#0b1220;
-  color:#e5e7eb;
+  font-family:Arial,Helvetica,sans-serif;
+  color:#111827;
+  background:#ffffff;
 }
 
-header{
+/* ===== HERO ===== */
+.hero{
   background:
-    linear-gradient(180deg,rgba(0,0,0,.7),#0b1220),
-    url('logo.jpeg') center/260px no-repeat;
+    linear-gradient(180deg,rgba(0,0,0,.55),rgba(0,0,0,.75)),
+    url('1.jpeg') center/cover no-repeat;
   text-align:center;
-  padding:90px 20px;
+  padding:110px 20px;
+  color:#fff;
 }
 
-header img{
-  width:130px;
-  animation:float 4s ease-in-out infinite;
+.hero img{
+  width:120px;
+  margin-bottom:15px;
+  animation:float 3.5s ease-in-out infinite;
 }
 
 @keyframes float{
   0%{transform:translateY(0)}
-  50%{transform:translateY(-12px)}
+  50%{transform:translateY(-10px)}
   100%{transform:translateY(0)}
 }
 
-h1{
-  color:#38bdf8;
-  margin:20px 0 10px;
-  font-size:2.4em;
+.hero h1{
+  font-size:2.6em;
+  margin:10px 0;
 }
 
+.hero p{
+  font-size:1.1em;
+  opacity:.95;
+}
+
+/* ===== SECTION ===== */
 section{
   max-width:1200px;
   margin:auto;
-  padding:60px 20px;
+  padding:70px 20px;
 }
 
 h2{
   text-align:center;
-  color:#38bdf8;
-  margin-bottom:30px;
+  font-size:2em;
+  margin-bottom:20px;
 }
 
-p.center{
+.subtitle{
   text-align:center;
-  max-width:820px;
-  margin:auto;
+  max-width:850px;
+  margin:0 auto 40px;
+  color:#4b5563;
   line-height:1.7;
 }
 
+/* ===== GRID ===== */
 .grid{
   display:grid;
-  grid-template-columns:repeat(auto-fit,minmax(220px,1fr));
-  gap:20px;
-}
-
-.card{
-  background:#020617;
-  border-radius:14px;
-  padding:12px;
+  grid-template-columns:repeat(auto-fit,minmax(230px,1fr));
+  gap:22px;
 }
 
 .card img{
   width:100%;
-  height:170px;
+  height:180px;
   object-fit:cover;
   border-radius:10px;
   transition:.3s;
 }
 
 .card img:hover{
-  transform:scale(1.05);
+  transform:scale(1.04);
 }
 
-footer{
-  background:#020617;
-  padding:40px 20px;
+/* ===== ALAMAT ===== */
+.address{
+  background:#f8fafc;
+  border-top:1px solid #e5e7eb;
+}
+
+.address-box{
+  display:grid;
+  grid-template-columns:repeat(auto-fit,minmax(280px,1fr));
+  gap:30px;
   text-align:center;
-  font-size:14px;
 }
 
-footer .alamat{
-  line-height:1.9;
-  margin-bottom:15px;
+.address-box div{
+  background:#fff;
+  padding:25px;
+  border-radius:12px;
+  box-shadow:0 4px 20px rgba(0,0,0,.05);
+}
+
+/* ===== FOOTER ===== */
+footer{
+  background:#0f172a;
+  color:#cbd5f5;
+  text-align:center;
+  padding:30px 20px;
+  font-size:14px;
 }
 </style>
 </head>
 
 <body>
 
-<header>
-  <img src="logo.jpeg" alt="Logo Anugerah Sinergijaya Group">
+<!-- HERO -->
+<div class="hero">
+  <img src="logo.jpeg" alt="Anugerah Sinergijaya Group">
   <h1>Anugerah Sinergijaya Group</h1>
-  <p>Depot Air Minum RO Premium & Jasa Pemasangan</p>
-</header>
+  <p>Depot Air Minum RO Premium & Jasa Pemasangan Profesional</p>
+</div>
 
+<!-- TENTANG -->
 <section>
   <h2>Tentang Kami</h2>
-  <p class="center">
-    Anugerah Sinergijaya Group bergerak di bidang depot air minum RO premium
-    serta jasa pemasangan perangkat depot air RO. Kami mengutamakan kualitas,
-    higienitas, dan pelayanan profesional untuk kebutuhan air minum masyarakat.
+  <p class="subtitle">
+    Anugerah Sinergijaya Group adalah penyedia depot air minum RO premium
+    serta jasa pemasangan perangkat depot air RO dengan standar higienis,
+    profesional, dan terpercaya untuk kebutuhan masyarakat.
   </p>
 </section>
 
+<!-- GALERI DEPOT -->
 <section>
   <h2>Galeri Depot Air Minum</h2>
   <div class="grid">
@@ -131,8 +155,14 @@ footer .alamat{
   </div>
 </section>
 
+<!-- PEMASANGAN -->
 <section>
   <h2>Review Pemasangan Depot Air RO</h2>
+  <p class="subtitle">
+    Dokumentasi beberapa proses pemasangan perangkat depot air RO
+    yang telah kami kerjakan.
+  </p>
+
   <div class="grid">
     <div class="card"><img src="pemasangan1.jpeg"></div>
     <div class="card"><img src="pemasangan2.jpeg"></div>
@@ -147,24 +177,31 @@ footer .alamat{
   </div>
 </section>
 
+<!-- ALAMAT -->
+<section class="address">
+  <h2>Alamat & Kontak</h2>
+  <div class="address-box">
+    <div>
+      <strong>Kantor Pusat</strong><br><br>
+      Jl. Bintara VII RT 004 RW 003<br>
+      Bekasi
+    </div>
+
+    <div>
+      <strong>Cabang</strong><br><br>
+      Jl. Malaka Baru No 8A RT 05 RW 01<br>
+      Bintara, Bekasi Barat
+    </div>
+
+    <div>
+      <strong>Kontak</strong><br><br>
+      📞 0856-9431-9000
+    </div>
+  </div>
+</section>
+
 <footer>
-  <div class="alamat">
-    <strong>Alamat Pusat:</strong><br>
-    Jl. Bintara VII RT 004 RW 003, Bekasi
-  </div>
-
-  <div class="alamat">
-    <strong>Cabang:</strong><br>
-    Jl. Malaka Baru No 8A RT 05 RW 01<br>
-    Bintara, Bekasi Barat
-  </div>
-
-  <div class="alamat">
-    <strong>Kontak:</strong><br>
-    📞 0856-9431-9000
-  </div>
-
-  <p>© 2025 Anugerah Sinergijaya Group</p>
+  © 2025 Anugerah Sinergijaya Group
 </footer>
 
 </body>
