--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <title>Anugerah Sinergijaya Group | Depot Air Minum RO Premium</title>
 
-<meta name="description" content="Anugerah Sinergijaya Group melayani depot air minum RO premium dan jasa pemasangan depot air RO di Bekasi.">
+<meta name="description" content="Anugerah Sinergijaya Group melayani depot air minum RO premium dan jasa pemasangan perangkat depot air RO di Bekasi.">
 <meta name="keywords" content="depot air minum, depot air RO, pemasangan depot air RO, depot air bekasi">
 <meta name="robots" content="index, follow">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,8 +14,8 @@
 body{
   margin:0;
   font-family:Arial,Helvetica,sans-serif;
-  color:#111827;
   background:#ffffff;
+  color:#111827;
 }
 
 /* ===== HERO ===== */
@@ -23,13 +23,13 @@ body{
   background:
     linear-gradient(180deg,rgba(0,0,0,.55),rgba(0,0,0,.75)),
     url('1.jpeg') center/cover no-repeat;
+  padding:120px 20px;
   text-align:center;
-  padding:110px 20px;
   color:#fff;
 }
 
 .hero img{
-  width:120px;
+  width:130px;
   margin-bottom:15px;
   animation:float 3.5s ease-in-out infinite;
 }
@@ -41,7 +41,7 @@ body{
 }
 
 .hero h1{
-  font-size:2.6em;
+  font-size:2.7em;
   margin:10px 0;
 }
 
@@ -60,13 +60,13 @@ section{
 h2{
   text-align:center;
   font-size:2em;
-  margin-bottom:20px;
+  margin-bottom:15px;
 }
 
-.subtitle{
+.desc{
   text-align:center;
   max-width:850px;
-  margin:0 auto 40px;
+  margin:0 auto 45px;
   color:#4b5563;
   line-height:1.7;
 }
@@ -74,23 +74,23 @@ h2{
 /* ===== GRID ===== */
 .grid{
   display:grid;
-  grid-template-columns:repeat(auto-fit,minmax(230px,1fr));
-  gap:22px;
+  grid-template-columns:repeat(auto-fit,minmax(240px,1fr));
+  gap:24px;
 }
 
-.card img{
+.grid img{
   width:100%;
-  height:180px;
+  height:190px;
   object-fit:cover;
   border-radius:10px;
   transition:.3s;
 }
 
-.card img:hover{
-  transform:scale(1.04);
+.grid img:hover{
+  transform:scale(1.05);
 }
 
-/* ===== ALAMAT ===== */
+/* ===== ADDRESS ===== */
 .address{
   background:#f8fafc;
   border-top:1px solid #e5e7eb;
@@ -104,10 +104,10 @@ h2{
 }
 
 .address-box div{
-  background:#fff;
-  padding:25px;
+  background:#ffffff;
+  padding:28px;
   border-radius:12px;
-  box-shadow:0 4px 20px rgba(0,0,0,.05);
+  box-shadow:0 6px 22px rgba(0,0,0,.06);
 }
 
 /* ===== FOOTER ===== */
@@ -133,47 +133,46 @@ footer{
 <!-- TENTANG -->
 <section>
   <h2>Tentang Kami</h2>
-  <p class="subtitle">
-    Anugerah Sinergijaya Group adalah penyedia depot air minum RO premium
+  <p class="desc">
+    Anugerah Sinergijaya Group merupakan penyedia depot air minum RO premium
     serta jasa pemasangan perangkat depot air RO dengan standar higienis,
-    profesional, dan terpercaya untuk kebutuhan masyarakat.
+    profesional, dan terpercaya.
   </p>
 </section>
 
 <!-- GALERI DEPOT -->
 <section>
-  <h2>Galeri Depot Air Minum</h2>
+  <h2>Depot Air Minum RO</h2>
   <div class="grid">
-    <div class="card"><img src="1.jpeg"></div>
-    <div class="card"><img src="2.jpeg"></div>
-    <div class="card"><img src="3.jpeg"></div>
-    <div class="card"><img src="4.jpeg"></div>
-    <div class="card"><img src="5.jpeg"></div>
-    <div class="card"><img src="6.jpeg"></div>
-    <div class="card"><img src="7.jpeg"></div>
-    <div class="card"><img src="8.jpeg"></div>
+    <img src="1.jpeg">
+    <img src="2.jpeg">
+    <img src="3.jpeg">
+    <img src="4.jpeg">
+    <img src="5.jpeg">
+    <img src="6.jpeg">
+    <img src="7.jpeg">
+    <img src="8.jpeg">
   </div>
 </section>
 
 <!-- PEMASANGAN -->
 <section>
-  <h2>Review Pemasangan Depot Air RO</h2>
-  <p class="subtitle">
-    Dokumentasi beberapa proses pemasangan perangkat depot air RO
+  <h2>Pemasangan Depot Air RO</h2>
+  <p class="desc">
+    Dokumentasi beberapa hasil pemasangan perangkat depot air RO
     yang telah kami kerjakan.
   </p>
-
   <div class="grid">
-    <div class="card"><img src="pemasangan1.jpeg"></div>
-    <div class="card"><img src="pemasangan2.jpeg"></div>
-    <div class="card"><img src="pemasangan3.jpeg"></div>
-    <div class="card"><img src="pemasangan4.jpeg"></div>
-    <div class="card"><img src="pemasangan5.jpeg"></div>
-    <div class="card"><img src="pemasangan6.jpeg"></div>
-    <div class="card"><img src="pemasangan7.jpeg"></div>
-    <div class="card"><img src="pemasangan8.jpeg"></div>
-    <div class="card"><img src="pemasangan9.jpeg"></div>
-    <div class="card"><img src="pemasangan10.jpeg"></div>
+    <img src="pemasangan1.jpeg">
+    <img src="pemasangan2.jpeg">
+    <img src="pemasangan3.jpeg">
+    <img src="pemasangan4.jpeg">
+    <img src="pemasangan5.jpeg">
+    <img src="pemasangan6.jpeg">
+    <img src="pemasangan7.jpeg">
+    <img src="pemasangan8.jpeg">
+    <img src="pemasangan9.jpeg">
+    <img src="pemasangan10.jpeg">
   </div>
 </section>
 
@@ -186,13 +185,11 @@ footer{
       Jl. Bintara VII RT 004 RW 003<br>
       Bekasi
     </div>
-
     <div>
       <strong>Cabang</strong><br><br>
       Jl. Malaka Baru No 8A RT 05 RW 01<br>
       Bintara, Bekasi Barat
     </div>
-
     <div>
       <strong>Kontak</strong><br><br>
       📞 0856-9431-9000
